--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.1",
+    "@agm/snazzy-info-window": "^1.0.0-beta.1",
     "@angular/animations": "^4.4.5",
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.4.5",
@@ -28,6 +29,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.4.2",
+    "snazzy-info-window": "^1.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
