--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@agm/core": "^1.0.0-beta.1",
     "@agm/snazzy-info-window": "^1.0.0-beta.1",
     "@angular/animations": "^4.4.5",
-    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/cdk": "git+https://github.com/angular/cdk-builds.git",
     "@angular/common": "^4.4.5",
     "@angular/compiler": "^4.4.5",
     "@angular/core": "^4.4.5",
     "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "^4.4.5",
     "@angular/http": "^4.4.5",
-    "@angular/material": "^2.0.0-beta.12",
+    "@angular/material": "git+https://github.com/angular/material2-builds.git",
     "@angular/platform-browser": "^4.4.5",
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
