--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-tree-component": "^5.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-popper": "^1.2.0",
     "rxjs": "^5.4.2",
     "snazzy-info-window": "^1.1.0",
     "zone.js": "^0.8.14"
