--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^4.4.5",
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
+    "angular-in-memory-web-api": "^0.5.0",
     "angular-tree-component": "^5.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -53,6 +54,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.0"
+    "typescript": "^2.3.4"
   }
 }
